--- a/templates/index.html
+++ b/templates/index.html
@@ -420,6 +420,7 @@
     }
 
     function besteleButtonClick(e, sender) {
+        console.log(sender);
         e.stopPropagation();
     }
 
@@ -1985,6 +1986,34 @@
         setTimeout(function () {
             playOctave(i);
         }, 500);
+    }
+
+    let roots = {0: 'la', 9: 'si', 13: 'do', 22: 're', 31: 'mi', 35: 'fa', 44: 'sol'};
+
+    let topKoma = 0,
+        koma = 0,
+        lastRoot;
+    for (let i = 0; i < 24; i++) {
+        if (topKoma in roots) {
+            lastRoot = roots[topKoma];
+        }
+        console.log(lastRoot, topKoma % 9);
+        let diff = Math.floor(1000 * (tune.note(i + 1) - tune.note(i))) / 1000;
+        switch (diff) {
+            case 0.234:
+                koma = 1;
+                break;
+            case 0.667:
+                koma = 3;
+                break;
+            case 0.902:
+                koma = 4;
+                break;
+            default:
+                koma = null;
+                break;
+        }
+        topKoma += koma;
     }
 
 </script>
