--- a/templates/index.html
+++ b/templates/index.html
@@ -506,22 +506,34 @@
             return;
         }
         let noteBare = note.getNote();
-        if (noteBare === 'rest') {
-            return;
-        }
-        let acc = note.getAcc();
         let dur = note.getDuration();
         let tempo = mParams.usul.tempo;
-        let pitch = tmmMidiPitches[noteBare];
-        if (acc) {
-            let amount = tmmKomas[acc.substr(-1)];
-            if (acc.charAt(0) === 'b') {
-                amount *= -1;
-            }
-            pitch += amount;
-        }
         let duration = (60 / tempo) / ((1 / 4) / dur);
-        mParams.instrument.start(pitch, 0, {duration: duration});
+        if (noteBare !== 'rest') {
+            let acc = note.getAcc();
+            let pitch = tmmMidiPitches[noteBare];
+            if (acc) {
+                let amount = tmmKomas[acc.substr(-1)];
+                if (acc.charAt(0) === 'b') {
+                    amount *= -1;
+                }
+                pitch += amount;
+            }
+            mParams.instrument.start(pitch, 0, {duration: duration});
+        }
+        return duration;
+    }
+
+    function playWhole(songObj) {
+        if (!songObj || songObj.length === 0) return;
+        let note = songObj[0];
+        let tail = songObj.slice(1);
+        if (!tail) return;
+        let wait = playNote(note) * 1000;
+        console.log(wait);
+        setTimeout(function () {
+            playWhole(tail);
+        }, wait);
     }
 
     function allowNewInsertion(allow) {
@@ -1882,6 +1894,10 @@
             this.addMeasure(measure);
         };
 
+        this.getMeasures = function () {
+            return this.measures;
+        };
+
         this.handleMouse = function (x, y) {
             for (let measure of this.measures) {
                 measure.mouseOver(x, y);
@@ -1976,6 +1992,18 @@
             }
         };
 
+        this.getWholePlayableObject = function () {
+            let allMeasures = [];
+            for (let satir of this.satirlar) {
+                allMeasures = allMeasures.concat(satir.getMeasures());
+            }
+            let song = [];
+            for (let measure of allMeasures) {
+                song = song.concat(measure.getNotes());
+            }
+            return song;
+        };
+
         this.attachEventHandlers = function () {
             let that = this;
             let pt = that.svgElem.createSVGPoint();
@@ -2013,6 +2041,10 @@
                 if (mParams.highElem && (evt.key === 'Delete' || evt.key === 'Backspace')) {
                     let smn = mParams.highElem.attr('smn').split(',');
                     that.satirlar[smn[0]].deleteSatirNote(smn[1], smn[2]);
+                }
+
+                if (evt.key === ' ' || evt.code === 'Space') {
+                    playWhole(that.getWholePlayableObject());
                 }
             })
         };
